fix font size search on mobile

--- a/frontend/web/less/mobile/landing.less
+++ b/frontend/web/less/mobile/landing.less
@@ -32,7 +32,7 @@ body{
         background: #fff;
         border: none;
         i{
-          font-size: 20px;
+          font-size: 14px;
           color: #8f8f8f;
         }
       }
